# PyMeasure

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
pymeasure/: constants.py  dialogs.py  models.py  panel.py  viewer.py  window.py
pymeasure/core/: constants.py  geometry.py  models.py  prefs.py
pymeasure/gui/: dialogs.py  panel.py  viewer.py  window.py
src/pymeasure/core/: constants.py  contours.py  models.py
src/pymeasure/gui/: dialogs.py  icons.py  panel.py  viewer.py  window.py
tests/: test_geometry.py  test_prefs.py
