[project]
name = "PyMeasure"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.27.2.3",
    "pyside6>=6.11.1",
]

[project.scripts]
pymeasure = "pymeasure.gui.window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pymeasure"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0",
]
